# genetic_bioinf

./: .gitignore  CMakeLists.txt
res/: config.ini
src/: config.cpp  config.hpp  genetic.cpp  genetic.hpp  instance.cpp  instance.hpp  main.cpp  shuffle.cpp  shuffle.hpp
